# oxc

.github/actions/rustup/: action.yml
.github/workflows/: ci.yml  mayhem.yml
crates/oxc_ast_lower/src/: lib.rs
crates/oxc_hir/src/: hir.rs  hir_builder.rs  visit_mut.rs
crates/oxc_linter/fuzz/: Cargo.toml
crates/oxc_linter/fuzz/fuzz_targets/: lint.rs
crates/oxc_minifier/examples/: minifier.rs
crates/oxc_minifier/src/compressor/: mod.rs
crates/oxc_minifier/src/printer/: gen.rs
crates/oxc_semantic2/src/: mangler.rs
mayhem/: Dockerfile  lint.mayhemfile
tasks/coverage/: minifier_test262.snap
tasks/minsize/: minsize.snap
